apiutils